--- a/01. PARTIE LEGISLATIVE/Article L3121-1 - 23083933.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-1 - 23083933.md
@@ -1,15 +1,15 @@
 # Article L3121-1
 
 Les taxis sont des véhicules automobiles comportant, outre le siège du conducteur, huit places assises au maximum, munis
-d'équipements spéciaux et dont le propriétaire ou l'exploitant est titulaire d'une autorisation de stationnement sur la voie
-publique, en attente de la clientèle, afin d'effectuer, à la demande de celle-ci et à titre onéreux, le transport particulier
-des personnes et de leurs bagages.
+d'équipements spéciaux et d'un terminal de paiement électronique, et dont le propriétaire ou l'exploitant est titulaire d'une
+autorisation de stationnement sur la voie publique, en attente de la clientèle, afin d'effectuer, à la demande de celle-ci et
+à titre onéreux, le transport particulier des personnes et de leurs bagages.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°95-66 du 20 janvier 1995 - art. 1 (Ab)
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
@@ -25,6 +25,6 @@ des personnes et de leurs bagages.
 	  - Code des transports - art. L3124-4 (V)
 	  - Code des transports - art. R3121-1 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 2
