--- a/01. PARTIE LEGISLATIVE/Article L3121-10 - 23083909.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-10 - 23083909.md
@@ -1,13 +1,22 @@
 # Article L3121-10
 
 L'exercice de l'activité de conducteur de taxi est subordonné à la délivrance d'une carte professionnelle par l'autorité
-administrative.
+administrative. Il est incompatible avec l'exercice de l'activité de conducteur de voiture de transport avec chauffeur.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°95-66 du 20 janvier 1995 - art. 2 bis (VT), alinéa 1
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Cite**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 6
+	  - Code des transports - art. L3121-3
+
+	**Modifié par**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 7
 
 	**Cité par**:
 
@@ -16,7 +25,3 @@ administrative.
 	  - Code des transports - art. R3121-13 (V)
 	  - Code des transports - art. R3121-16 (M)
 	  - Code des transports - art. R3121-17 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
