--- a/01. PARTIE LEGISLATIVE/Article L3122-2 - 23083896.md
+++ b/01. PARTIE LEGISLATIVE/Article L3122-2 - 23083896.md
@@ -1,16 +1,32 @@
 # Article L3122-2
 
-L'exploitation de voitures de petite remise est soumise à autorisation délivrée par l'autorité administrative.
+Les conditions mentionnées à l'article L. 3122-1 incluent le prix total de la prestation, qui est déterminé lors de la
+réservation préalable mentionnée au 1° du II de l'article L. 3120-2. Toutefois, s'il est calculé uniquement en fonction de la
+durée de la prestation, le prix peut être, en tout ou partie, déterminé après la réalisation de cette prestation, dans le
+respect de l'article L. 113-3-1 du code de la consommation.
 
-Cette autorisation ne peut être accordée qu'après avis conforme de l'autorité investie du pouvoir de police municipale dans
-les communes dans lesquelles une ou plusieurs autorisations d'exploitation de taxi ont été délivrées et sont effectivement
-utilisées. Toute autorisation est incessible.
+**Nota:**
+
+Dans sa décision n° 2015-468/469/472 QPC du 22 mai 2015 (NOR : CSCX1512314S), le Conseil constitutionnel a déclaré l'article
+L. 3122-2 du code des transports contraire à la Constitution.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°77-6 du 3 janvier 1977 - art. 2 (Ab)
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 9
+
+	**Abrogé par**:
+
+	  - DÉCISION du 22 mai 2015 - art. 1, v. init.
+
+	**Cite**:
+
+	  - Code de la consommation - art. L113-3-1
 
 	**Cité par**:
 
@@ -18,7 +34,3 @@ utilisées. Toute autorisation est incessible.
 	  - Code de la consommation - art. L511-7 (M)
 	  - Code de la consommation - art. R113-1 (Ab)
 	  - Code des transports - art. R3124-7 (An)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
