--- a/01. PARTIE LEGISLATIVE/Article L3551-1 - 23083502.md
+++ b/01. PARTIE LEGISLATIVE/Article L3551-1 - 23083502.md
@@ -1,7 +1,7 @@
 # Article L3551-1
 
-Les articles L. 3113-2 et L. 3113-3, le chapitre V du titre Ier du livre Ier de la présente partie, l'article L. 3115-6, le
-second alinéa de l'article L. 3122-1 et les articles L. 3211-2 et L. 3211-3 ne s'appliquent pas à Saint-Pierre-et-Miquelon.
+Les articles L. 3113-2 et L. 3113-3, le chapitre V du titre Ier, le chapitre II et la section 2 du chapitre IV du titre II du
+livre Ier de la présente partie et les articles L. 3211-2 et L. 3211-3 ne s'appliquent pas à Saint-Pierre-et-Miquelon.
 
 **Liens relatifs à cet article**
 
@@ -11,11 +11,9 @@ second alinéa de l'article L. 3122-1 et les articles L. 3211-2 et L. 3211-3 ne 
 
 	**Modifié par**:
 
-	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 15
 
 	**Cite**:
 
-	  - Code des transports - art. L3113-2
-	  - Code des transports - art. L3115-6
-	  - Code des transports - art. L3122-1
+	  - Code des transports - art. L3113-2 (V)
 	  - Code des transports - art. L3211-2
