--- a/01. PARTIE LEGISLATIVE/Article L3121-4 - 23083924.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-4 - 23083924.md
@@ -1,7 +1,7 @@
 # Article L3121-4
 
-Les transactions prévues par les articles L. 3121-2 et L. 3121-3 sont répertoriées, avec mention de leur montant, dans un
-registre tenu par l'autorité administrative  compétente pour délivrer l'autorisation de stationnement. 
+Les transactions prévues par l'article L. 3121-2 sont répertoriées, avec mention de leur montant, dans un registre tenu par
+l'autorité administrative compétente pour délivrer l'autorisation de stationnement. 
 
 Le nouveau titulaire remet alors à cette autorité les documents justificatifs de l'exploitation effective et continue de
 l'autorisation par son prédécesseur. 
@@ -17,11 +17,11 @@ date de leur conclusion.
 
 	**Modifié par**:
 
-	  - Loi n°2014-58 du 27 janvier 2014 - art. 66
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 6 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L3121-2
+	  - Code des transports - art. L3121-2 (V)
 
 	**Cité par**:
 
