--- a/01. PARTIE LEGISLATIVE/Article L3121-5 - 23083922.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-5 - 23083922.md
@@ -1,15 +1,34 @@
 # Article L3121-5
 
-La délivrance de nouvelles autorisations par l'autorité administrative compétente n'ouvre pas droit à indemnité au profit des
-titulaires d'autorisations précédemment délivrées.
+La délivrance de nouvelles autorisations de stationnement par l'autorité administrative compétente n'ouvre pas droit à
+indemnité au profit des titulaires d'autorisations de stationnement délivrées avant la promulgation de la loi n° 2014-1104 du
+1er octobre 2014 relative aux taxis et aux voitures de transport avec chauffeur ou au profit des demandeurs inscrits sur
+liste d'attente. 
 
-Les nouvelles autorisations sont délivrées en fonction de listes d'attente rendues publiques.
+Les nouvelles autorisations sont délivrées en fonction de listes d'attente rendues publiques. Nul ne peut s'inscrire sur plus
+d'une liste d'attente. Les candidats à l'inscription sur liste d'attente doivent être titulaires d'une carte professionnelle
+prévue à l'article L. 3121-10 en cours de validité, délivrée par le représentant de l'Etat dans le département où
+l'autorisation de stationnement est demandée, et ne pas être déjà titulaires d'une autorisation de stationnement. 
+
+Seuls peuvent se voir délivrer une autorisation de stationnement les titulaires d'une carte professionnelle en cours de
+validité, délivrée par le représentant de l'Etat dans le département où l'autorisation de stationnement est délivrée. En
+outre, la délivrance est effectuée en priorité aux titulaires qui peuvent justifier de l'exercice de l'activité de conducteur
+de taxi pendant une période minimale de deux ans au cours des cinq ans précédant la date de l'inscription sur liste
+d'attente.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°95-66 du 20 janvier 1995 - art. 6 (Ab)
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Cite**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 6
 
 	**Cité par**:
 
@@ -18,7 +37,3 @@ Les nouvelles autorisations sont délivrées en fonction de listes d'attente ren
 	  - Arrêté du 19 janvier 2016 (V)
 	  - Arrêté du 19 janvier 2016 - art. 1 (V)
 	  - Code des transports - art. R3121-13 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
