--- a/01. PARTIE LEGISLATIVE/Article L3122-1 - 23083898.md
+++ b/01. PARTIE LEGISLATIVE/Article L3122-1 - 23083898.md
@@ -1,17 +1,28 @@
 # Article L3122-1
 
-Les voitures de petite remise sont des véhicules automobiles comportant, outre le siège du conducteur, huit places assises au
-maximum, mis, à titre onéreux, avec un conducteur, à la disposition des personnes qui en font la demande pour assurer leur
-transport et celui de leurs bagages. 
+Le présent chapitre s'applique aux entreprises qui mettent à la disposition de leur clientèle une ou plusieurs voitures de
+transport avec chauffeur, dans des conditions fixées à l'avance entre les parties. Ces entreprises sont soit des exploitants
+de voitures de transport avec chauffeur, soit des intermédiaires qui mettent en relation des exploitants et des clients. 
 
-Les dispositions applicables aux voitures de tourisme avec chauffeur sont fixées par les articles L. 231-1 à L. 231-4 du code
-du tourisme.
+Les modalités d'application du présent chapitre sont définies par décret en Conseil d'Etat.
+
+**Nota:**
+
+Conformément au 16 VI de la loi n° 2014-1104 du 1er octobre 2014, les autorisations d'exploiter des voitures de petite remise
+régulièrement exploitées au 2 octobre 2014 demeurent, jusqu'à leur terme, régies par le chapitre II et la section 2 du
+chapitre IV du titre II du livre Ier de la troisième partie du code des transports et par le 26° de l'article 9 de
+l'ordonnance n° 2010-1307 du 28 octobre 2010 relative à la partie législative du code des transports, dans leur rédaction
+antérieure à la présente loi.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°77-6 du 3 janvier 1977 - art. 1 (Ab), alinéa 1
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 9
 
 	**Cité par**:
 
@@ -22,11 +33,3 @@ du tourisme.
 	  - Code des transports - art. L3122-5 (Ab)
 	  - Code des transports - art. L3122-6 (Ab)
 	  - Code des transports - art. L3551-1 (M)
-
-	**Cite**:
-
-	  - Code du tourisme. - art. L231-1 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
