--- a/01. PARTIE LEGISLATIVE/Article L3122-4 - 23083889.md
+++ b/01. PARTIE LEGISLATIVE/Article L3122-4 - 23083889.md
@@ -1,12 +1,25 @@
 # Article L3122-4
 
-Les conditions d'application du présent chapitre sont précisées par voie réglementaire.
+Les exploitants disposent d'une ou de plusieurs voitures de transport avec chauffeur répondant à des conditions techniques et
+de confort définies par voie réglementaire et emploient un ou plusieurs conducteurs répondant aux conditions prévues à
+l'article L. 3122-8. 
+
+Ils justifient de capacités financières définies par le décret en Conseil d'Etat mentionné à l'article L. 3122-1.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°77-6 du 3 janvier 1977 - art. 5 (Ab), en ce qui concerne les conditions d'application
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 9
+
+	**Cite**:
+
+	  - Code des transports - art. L3122-1 (V)
+	  - Code des transports - art. L3122-8 (V)
 
 	**Cité par**:
 
@@ -15,7 +28,3 @@ Les conditions d'application du présent chapitre sont précisées par voie rég
 	  - Code des transports - art. R3122-1 (VD)
 	  - Code des transports - art. R3122-2 (VD)
 	  - Code des transports - art. R3122-9 (M)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
