--- a/01. PARTIE LEGISLATIVE/Article L3123-1 - 23083885.md
+++ b/01. PARTIE LEGISLATIVE/Article L3123-1 - 23083885.md
@@ -2,23 +2,36 @@
 
 Les entreprises qui mettent à la disposition de leur clientèle, pour assurer leur transport ainsi que celui de leurs bagages,
 des motocyclettes ou des tricycles à moteur conduits par le propriétaire ou son préposé, suivant des conditions fixées à
-l'avance entre les parties, doivent disposer, dans des conditions fixées par voie réglementaire, de chauffeurs qualifiés et
-de véhicules adaptés.
+l'avance entre les parties, doivent disposer, dans des conditions fixées par voie réglementaire :
+
+1° De chauffeurs titulaires d'un certificat de capacité professionnelle ou, après stage d'adaptation ou épreuve d'aptitude,
+de chauffeurs, ressortissants d'un Etat membre de l'Union européenne ou d'un Etat partie à l'accord sur l'Espace économique
+européen qui sont titulaires d'un certificat de capacité professionnelle délivré par l'autorité compétente d'un de ces Etats
+où un tel certificat est exigé ou qui peuvent faire état de l'exercice de la profession dans un de ces Etats où un tel
+certificat n'est pas exigé pendant une durée minimale variable selon les titres de formation qu'ils détiennent ;
+
+2° D'un ou plusieurs véhicules adaptés répondant à des conditions techniques et de confort et sur lesquels doit être apposée
+une signalétique visible ;
+
+3° De chauffeurs titulaires, depuis au moins trois ans, de la catégorie du permis de conduire autorisant la conduite des
+véhicules prévus au premier alinéa ;
+
+4° D'un contrat d'assurance couvrant leur responsabilité civile en matière de véhicule et de transport de personnes.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°2009-888 du 22 juillet 2009 - art. 5 (Ab), alinéas 1 et 2, paragraphes I et II
-
-	**Cité par**:
-
-	  - Code des transports - art. L3123-2 (V)
-	  - Code des transports - art. R3120-7 (V)
-	  - Code des transports - art. R3123-2 (M)
-	  - Code des transports - art. R3123-4 (V)
-	  - Code des transports - art. R3124-10 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 14
+
+	**Cité par**:
+
+	  - Code des transports - art. L3123-2 (Ab)
+	  - Code des transports - art. R3120-7 (V)
+	  - Code des transports - art. R3123-2 (M)
+	  - Code des transports - art. R3123-4 (V)
+	  - Code des transports - art. R3124-10 (V)
