--- a/01. PARTIE LEGISLATIVE/Article L3124-4 - 23083864.md
+++ b/01. PARTIE LEGISLATIVE/Article L3124-4 - 23083864.md
@@ -1,18 +1,18 @@
 # Article L3124-4
 
-I. ― Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait d'effectuer à la demande et à titre onéreux le
-transport particulier de personnes et de bagages sans être titulaire d'une autorisation de stationnement sur la voie publique
-en attente de clientèle, ou d'exercer l'activité de conducteur de taxi sans être titulaire de la carte professionnelle en
-cours de validité.
+I.-Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait d'exercer l'activité d'exploitant taxi sans être
+titulaire de l'autorisation de stationnement mentionnée à l'article L. 3121-1. 
 
-II. - Les personnes physiques coupables de l'infraction prévue par le présent article encourent également les peines
-complémentaires suivantes :
+II.-Les personnes physiques coupables de l'infraction prévue par le présent article encourent également les peines
+complémentaires suivantes : 
 
-1° La suspension, pour une durée de cinq ans au plus, du permis de conduire ;
+1° La suspension, pour une durée de cinq ans au plus, du permis de conduire ; 
 
-2° L'immobilisation, pour une durée d'un an au plus, du véhicule qui a servi à commettre l'infraction ;
+2° L'immobilisation, pour une durée d'un an au plus, du véhicule qui a servi à commettre l'infraction ; 
 
-3° La confiscation du véhicule qui a servi à commettre l'infraction.
+3° La confiscation du véhicule qui a servi à commettre l'infraction. 
+
+III.-Est puni de 15 000 € d'amende le fait de contrevenir au premier alinéa de l'article L. 3121-11-2.
 
 **Liens relatifs à cet article**
 
@@ -22,7 +22,13 @@ complémentaires suivantes :
 
 	**Modifié par**:
 
-	  - Loi n°2014-344 du 17 mars 2014 - art. 135
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 1
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 12
+
+	**Cite**:
+
+	  - Code des transports - art. L3121-1 (V)
+	  - Code des transports - art. L3121-11-2 (V)
 
 	**Cité par**:
 
