--- a/01. PARTIE LEGISLATIVE/Article L3124-6 - 23083854.md
+++ b/01. PARTIE LEGISLATIVE/Article L3124-6 - 23083854.md
@@ -1,25 +1,30 @@
 # Article L3124-6
 
-En cas de non-respect des dispositions de l'article L. 3122-3, l'autorité administrative peut suspendre l'autorisation
-d'exploiter une voiture de petite remise pour une durée qui ne peut excéder six mois. 
+En cas de violation, par un conducteur de voitures de transport, de la réglementation applicable à la profession, l'autorité
+administrative peut lui donner un avertissement ou procéder au retrait, temporaire ou définitif, de sa carte professionnelle.
 
-Elle peut aussi ordonner la mise en fourrière, aux frais de son propriétaire, de toute voiture de petite remise
-irrégulièrement exploitée jusqu'à décision de la juridiction saisie.
+**Nota:**
+
+Conformément à l'article 16 VI de la loi n° 2014-1104 du 1er octobre 2014, les autorisations d'exploiter des voitures de
+petite remise régulièrement exploitées à la date de publication de ladite loi, demeurent, jusqu'à leur terme, régies par le
+chapitre II et la section 2 du chapitre IV du titre II du livre Ier de la troisième partie du présent code et par le 26° de
+l'article 9 de l'ordonnance n° 2010-1307 du 28 octobre 2010 relative à la partie législative du code des transports, dans
+leur rédaction antérieure à la loi susmentionnée.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°77-6 du 3 janvier 1977 - art. 4 (Ab), alinéa 1
-
-	**Cite**:
-
-	  - Code des transports - art. L3122-3 (V)
-
-	**Cité par**:
-
-	  - Code des transports - art. R3124-4 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 11
+
+	**Abrogé par**:
+
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 9 (V)
+
+	**Cité par**:
+
+	  - Code des transports - art. R3124-4 (V)
