--- a/01. PARTIE LEGISLATIVE/Article L3124-7 - 23083852.md
+++ b/01. PARTIE LEGISLATIVE/Article L3124-7 - 23083852.md
@@ -1,13 +1,42 @@
 # Article L3124-7
 
-Les conditions d'application de la présente section sont précisées par décret en Conseil d'Etat.
+I.-Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait de contrevenir aux articles L. 3122-3 et L. 3122-5. 
+
+II.-Les personnes physiques reconnues coupables de l'infraction prévue au I encourent également les peines complémentaires
+suivantes : 
+
+1° La suspension, pour une durée maximale de cinq ans, du permis de conduire ; 
+
+2° L'immobilisation, pour une durée maximale d'un an, du véhicule qui a servi à commettre l'infraction ; 
+
+3° La confiscation du véhicule qui a servi à commettre l'infraction. 
+
+III.-Les personnes morales déclarées responsables pénalement, dans les conditions prévues à l'article 121-2 du code pénal, de
+l'infraction prévue au I du présent article encourent, outre l'amende suivant les modalités prévues à l'article 131-38 du
+même code, les peines prévues aux 8° et 9° de l'article 131-39 dudit code.
+
+**Nota:**
+
+Conformément à l'article 16 VI de la loi n° 2014-1104 du 1er octobre 2014, les autorisations d'exploiter des voitures de
+petite remise régulièrement exploitées à la date de publication de ladite loi, demeurent, jusqu'à leur terme, régies par le
+chapitre II et la section 2 du chapitre IV du titre II du livre Ier de la troisième partie du présent code et par le 26° de
+l'article 9 de l'ordonnance n° 2010-1307 du 28 octobre 2010 relative à la partie législative du code des transports, dans
+leur rédaction antérieure à la loi susmentionnée.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°77-6 du 3 janvier 1977 - art. 5 (Ab), ecqc les sanctions
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 11
+
+	**Cite**:
+
+	  - Code pénal - art. 121-2
+	  - Code pénal - art. 131-38
+	  - Code pénal - art. 131-39
+	  - Code des transports - art. L3122-3
+	  - Code des transports - art. L3122-5 (Ab)
