--- a/02. PARTIE REGLEMENTAIRE/Article D1112-1 - 28996283.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1112-1 - 28996283.md
@@ -12,27 +12,23 @@ cette même disposition.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-138 du 9 février 2006 - art. 1, alinéas 1 à 3 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2014-1323 du 4 novembre 2014 - art. 1
 
 	**Cité par**:
 
 	  - Code des transports - art. D1112-2 (VD)
 	  - Code des transports - art. D1112-3 (V)
-	  - Code des transports - art. D1112-6 (M)
+	  - Code des transports - art. D1112-6 (V)
 	  - Code des transports - art. D1112-7 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L1112-3 (V)
-	  - Code des transports - art. L1613-1 (V)
-	  - Code des transports - art. L2000-1 (V)
+	  - Code des transports - art. L1112-3
+	  - Code des transports - art. L1613-1
+	  - Code des transports - art. L2000-1
