--- a/02. PARTIE REGLEMENTAIRE/Article D1112-4 - 29720820.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1112-4 - 29720820.md
@@ -13,14 +13,10 @@ transport.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-138 du 9 février 2006 - art. 2, alinéas 2 à 5 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2014-1323 du 4 novembre 2014 - art. 1
