--- a/02. PARTIE REGLEMENTAIRE/Article R1821-1 - 28997248.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1821-1 - 28997248.md
@@ -1,7 +1,6 @@
 # Article R1821-1
 
-Les dispositions du chapitre II du titre Ier du livre Ier ainsi que des titres II et III du livre III ne sont pas applicables
-à Mayotte.
+Les dispositions           des titres II et III du livre III ne sont pas applicables à Mayotte.
 
 **Liens relatifs à cet article**
 
@@ -9,6 +8,6 @@ Les dispositions du chapitre II du titre Ier du livre Ier ainsi que des titres I
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2014-1321 du 4 novembre 2014 - art. 2
