--- a/02. PARTIE REGLEMENTAIRE/Article D1112-2 - 28996285.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1112-2 - 28996285.md
@@ -31,20 +31,16 @@ l'objet d'une modification substantielle, lorsque le marché principal les conce
 
 	**Cite**:
 
-	  - Décret n°59-157 du 7 janvier 1959 - art. 1 (V)
-	  - Décret n°85-891 du 16 août 1985 - art. 25 (V)
-	  - Décret n°2006-1279 du 19 octobre 2006 - art. 31 (V)
-	  - Code des transports - art. D1112-1 (V)
-	  - Code des transports - art. L1112-1 (V)
-
-	**Anciens textes**:
-
-	  - Décret n°2006-138 du 9 février 2006 - art. 1, alinéas 4 à 6 (Ab)
+	  - Décret n°59-157 du 7 janvier 1959 - art. 1
+	  - Décret n°85-891 du 16 août 1985 - art. 25
+	  - Décret n°2006-1279 du 19 octobre 2006 - art. 31
+	  - Code des transports - art. D1112-1
+	  - Code des transports - art. L1112-1
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2014-1323 du 4 novembre 2014 - art. 1
