--- a/02. PARTIE REGLEMENTAIRE/Article D1112-3 - 29720781.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1112-3 - 29720781.md
@@ -9,23 +9,19 @@ autres catégories d'usagers, avec la plus grande autonomie possible et sans dan
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-138 du 9 février 2006 - art. 2, alinéa 1 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2014-1323 du 4 novembre 2014 - art. 1
 
 	**Cite**:
 
-	  - Code de l'action sociale et des familles - art. L114 (V)
-	  - Code des transports - art. D1112-1 (V)
+	  - Code de l'action sociale et des familles - art. L114
+	  - Code des transports - art. D1112-1
 
 	**Cité par**:
 
-	  - Code des transports - art. D1112-6 (M)
+	  - Code des transports - art. D1112-6 (V)
