--- a/02. PARTIE REGLEMENTAIRE/Article D1112-5 - 29720792.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1112-5 - 29720792.md
@@ -17,14 +17,10 @@ et adaptée aux capacités de perception et de compréhension des personnes hand
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-138 du 9 février 2006 - art. 2, alinéas 6 à 10 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2014-1323 du 4 novembre 2014 - art. 1
