--- a/02. PARTIE REGLEMENTAIRE/Article D1112-6 - 29720765.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1112-6 - 29720765.md
@@ -11,22 +11,18 @@ mentionnés à l'article D. 1112-7.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-138 du 9 février 2006 - art. 3 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2014-1323 du 4 novembre 2014 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. D1112-1 (V)
+	  - Code des transports - art. D1112-1 (M)
 	  - Code des transports - art. D1112-3 (V)
 	  - Code des transports - art. D1112-7 (V)
-	  - Code des transports - art. L1613-1 (V)
-	  - Code des transports - art. L1613-4 (V)
+	  - Code des transports - art. L1613-1
+	  - Code des transports - art. L1613-4
