--- a/02. PARTIE REGLEMENTAIRE/Article D1112-7 - 29720811.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1112-7 - 29720811.md
@@ -8,23 +8,19 @@ modification substantielle.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-138 du 9 février 2006 - art. 4 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2014-1323 du 4 novembre 2014 - art. 1
 
 	**Cité par**:
 
 	  - Arrêté du 18 décembre 2015 (V)
-	  - Code des transports - art. D1112-6 (M)
+	  - Code des transports - art. D1112-6 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. D1112-1 (V)
+	  - Code des transports - art. D1112-1
