--- a/01. PARTIE LEGISLATIVE/Article L1821-1 - 23084890.md
+++ b/01. PARTIE LEGISLATIVE/Article L1821-1 - 23084890.md
@@ -1,7 +1,7 @@
 # Article L1821-1
 
-Le chapitre III du titre Ier du livre Ier, les titres II et III du livre III de la présente partie ne sont pas applicables à
-Mayotte.
+Le chapitre III du titre Ier du livre Ier, les chapitres III et IV du titre II du livre III de la présente partie ne sont pas
+applicables à Mayotte.
 
 **Liens relatifs à cet article**
 
@@ -11,4 +11,4 @@ Mayotte.
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 15
+	  - ORDONNANCE n°2014-1380 du 21 novembre 2014 - art. 1
