--- a/01. PARTIE LEGISLATIVE/Article L3521-4 - 23083528.md
+++ b/01. PARTIE LEGISLATIVE/Article L3521-4 - 23083528.md
@@ -1,14 +1,22 @@
 # Article L3521-4
 
-Pour son application à Mayotte, l'article L. 3411-1 est ainsi modifié : 
+Sont dispensés de l'obligation de qualification initiale prévue par l'article L. 3314-2 les conducteurs qui ont obtenu la
+catégorie C1, C1E, C, CE, D1, D1E, D ou DE du permis de conduire avant le 1er janvier 2016 lorsqu'ils conduisent, dans le
+Département de Mayotte, un véhicule correspondant à l'une de ces catégories. Toutefois, ces dispositions ne s'appliquent pas
+aux conducteurs qui n'ont jamais exercé à titre professionnel une activité de conduite de véhicule des catégories considérées
+ou qui ont interrompu cette activité pendant plus de dix ans.
 
-1° Au premier alinéa, les mots : " d'une licence communautaire ou " sont supprimés ; 
+**Nota:**
 
-2° Le deuxième alinéa n'est pas applicable ; 
-
-3° Au troisième alinéa, les mots : " et qui n'ont pas l'obligation de détenir une licence communautaire " sont supprimés.
+Conformément à l'article 5 de l'ordonnance n° 2014-1380 du 21 novembre 2014, les conducteurs mentionnés à l'article L. 3521-4
+satisfont à l'obligation de formation continue prévue par le décret pris en application de l'article L. 3314-3 avant le 1er
+janvier 2019.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2014-1380 du 21 novembre 2014 - art. 2
 
 	**Cité par**:
 
@@ -20,4 +28,4 @@ Pour son application à Mayotte, l'article L. 3411-1 est ainsi modifié :
 
 	**Cite**:
 
-	  - Code des transports - art. L3411-1 (VT)
+	  - Code des transports - art. L3314-2 (V)
