--- a/01. PARTIE LEGISLATIVE/Article L5723-1 - 23078822.md
+++ b/01. PARTIE LEGISLATIVE/Article L5723-1 - 23078822.md
@@ -1,15 +1,17 @@
 # Article L5723-1
 
-Les dispositions des articles L. 5314-3, 
-L. 5341-7 à L. 5341-10, L. 5343-1 à L. 5343-23, L. 5344-1 à L. 5344-4, L. 5351-3 en ce qui concerne le réseau ferré national
-et L. 5351-4 ne sont pas applicables à Mayotte.
+Les dispositions des articles L. 5314-3, L. 5343-1 à L. 5343-23, L. 5344-1 à L. 5344-4, L. 5351-3 en ce qui concerne le
+réseau ferré national et L. 5351-4 ne sont pas applicables à Mayotte.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2014-1380 du 21 novembre 2014 - art. 4
 
 	**Cite**:
 
 	  - Code des transports - art. L5314-3 (V)
-	  - Code des transports - art. L5341-7 (V)
 	  - Code des transports - art. L5343-1 (V)
 	  - Code des transports - art. L5344-1 (V)
 	  - Code des transports - art. L5351-3 (V)
