--- a/02. PARTIE REGLEMENTAIRE/Article D1803-2 - 28997194.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1803-2 - 28997194.md
@@ -8,19 +8,18 @@ métropolitaine.
 
 Le montant de l'aide versée aux personnes éligibles varie en fonction des ressources de celles-ci.
 
+La décision accordant une aide à la continuité territoriale vers la France métropolitaine précède la réservation du titre de
+transport.
+
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2010-1424 du 18 novembre 2010 - art. 2 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-166 du 13 février 2015 - art. 1
 
 	**Cité par**:
 
@@ -28,4 +27,4 @@ Le montant de l'aide versée aux personnes éligibles varie en fonction des ress
 
 	**Cite**:
 
-	  - Code des transports - art. L1803-2 (V)
+	  - Code des transports - art. L1803-2
