--- a/02. PARTIE REGLEMENTAIRE/Article D1803-6 - 28997206.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1803-6 - 28997206.md
@@ -6,8 +6,8 @@ pour objectif leur insertion durable dans l'emploi. Elle comprend :
 1° Le financement des frais liés à la formation, comprenant notamment la contribution à la rémunération de l'organisme qui
 dispense la formation dénommée " mobilité formation emploi " ; 
 
-2° Le versement d'une aide financière mensuelle pendant la durée de la formation, dans la limite de deux ans, dénommée "
-allocation complémentaire de mobilité " ; 
+2° Le versement d'une aide financière mensuelle pendant la durée de la formation, dans la limite de deux ans, et de trois ans
+pour les formations de la filière sanitaire, dénommée " allocation complémentaire de mobilité " ; 
 
 3° L'attribution d'une aide financière versée au début de l'action de formation et destinée à couvrir forfaitairement les
 premiers frais liés à l'installation du stagiaire dans le lieu où se déroule la formation, dénommée " allocation
@@ -24,17 +24,13 @@ par les entreprises ou des groupements d'entreprises.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2010-1424 du 18 novembre 2010 - art. 5 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-166 du 13 février 2015 - art. 2
 
 	**Cité par**:
 
@@ -43,4 +39,4 @@ par les entreprises ou des groupements d'entreprises.
 
 	**Cite**:
 
-	  - Code des transports - art. L1803-6 (V)
+	  - Code des transports - art. L1803-6
