--- a/02. PARTIE REGLEMENTAIRE/Article D5784-3 - 29815731.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D5784-3 - 29815731.md
@@ -1,18 +1,26 @@
 # Article D5784-3
 
-Les articles D. 5442-1-1 et D. 5442-1-2 et les dispositions de la section 3 du chapitre II du titre IV du livre IV sont
-applicables dans les îles Wallis et Futuna, dans leur rédaction résultant du décret n° 2014-1419 du 28 novembre 2014pris pour
-l'application des dispositions du titre IV du livre IV de la cinquième partie du code des transports et relatif aux modalités
-d'exercice de l'activité privée de protection des navires.
+Les articles D. 5442-1-1, D. 5442-1-2 et D. 5442-7 à D. 5442-9 sont applicables dans les îles Wallis et Futuna dans leur
+rédaction résultant du décret n° 2014-1419 du 28 novembre 2014 pris pour l'application des dispositions du titre IV du livre
+IV de la cinquième partie du code des transports et relatif aux modalités d'exercice de l'activité privée de protection des
+navires. 
+
+Les articles D. 5442-10 et D. 5442-11 sont applicables dans les îles Wallis et Futuna dans leur rédaction résultant du décret
+n° 2015-301 du 17 mars 2015 pris pour l'application de l'article L. 5442-10 du code des transports.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Décret n°2015-301 du 17 mars 2015 - art. 2
+
+	**Abrogé par**:
+
+	  - Décret n°2016-1893 du 28 décembre 2016 - art.
+
 	**Cite**:
 
-	  - Décret n°2014-1419 du 28 novembre 2014
 	  - Code des transports - art. D5442-1-1
-	  - Code des transports - art. D5442-1-2
-
-	**Créé par**:
-
-	  - Décret n°2014-1419 du 28 novembre 2014 - art. 2
+	  - Code des transports - art. D5442-10
+	  - Code des transports - art. D5442-7
+	  - Code des transports - art. L5442-10
