--- a/01. PARTIE LEGISLATIVE/Article L1802-2 - 23084989.md
+++ b/01. PARTIE LEGISLATIVE/Article L1802-2 - 23084989.md
@@ -4,13 +4,13 @@ Pour leur application à Mayotte, les dispositions du présent code sont ainsi a
 
 1° Le préfet de Mayotte exerce les attributions dévolues aux préfets de département et aux préfets de région ;
 
-2° Le conseil général de Mayotte et son président exercent les attributions dévolues aux conseils généraux et régionaux et à
-leurs présidents respectifs ;
+2° Le conseil général de Mayotte et son président exercent les attributions dévolues aux conseils départementaux et régionaux
+et à leurs présidents respectifs ;
 
 3° Les attributions du tribunal de grande instance et de son président ainsi que celles du tribunal d'instance et de son
 président sont exercées par le tribunal de première instance et son président ;
 
-4° Les références au département ou à la région sont remplacées par des références au Département de Mayotte (1)  ;
+4° Les références au département ou à la région sont remplacées par des références au Département de Mayotte (1) ;
 
 5° Les références au préfet maritime sont remplacées par des références au représentant de l'Etat compétent en mer ;
 
@@ -37,10 +37,6 @@ mots : "au Département de Mayotte".
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
+	  - Loi n°2013-403 du 17 mai 2013 - art. 1 (V)
