--- a/01. PARTIE LEGISLATIVE/Article L1802-3 - 23084982.md
+++ b/01. PARTIE LEGISLATIVE/Article L1802-3 - 23084982.md
@@ -5,8 +5,8 @@ Pour leur application à Saint-Barthélemy, les dispositions du présent code so
 1° Le représentant de l'Etat à Saint-Barthélemy exerce les attributions dévolues aux préfets de département et aux préfets de
 région ;
 
-2° Le conseil territorial de Saint-Barthélemy et son président exercent les attributions dévolues aux conseils généraux et
-régionaux et à leurs présidents respectifs ;
+2° Le conseil territorial de Saint-Barthélemy et son président exercent les attributions dévolues aux conseils départementaux
+et régionaux et à leurs présidents respectifs ;
 
 3° Les références à la commune, au département ou à la région sont remplacées par des références à la collectivité d'outre-
 mer de Saint-Barthélemy ;
@@ -23,10 +23,6 @@ références aux textes applicables localement en matière fiscale, d'urbanisme 
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
+	  - Loi n°2013-403 du 17 mai 2013 - art. 1 (V)
