--- a/01. PARTIE LEGISLATIVE/Article L1802-5 - 23084970.md
+++ b/01. PARTIE LEGISLATIVE/Article L1802-5 - 23084970.md
@@ -6,7 +6,7 @@ Pour leur application à Saint-Pierre-et-Miquelon, les dispositions du présent 
 préfets de région ;
 
 2° Le conseil territorial de Saint-Pierre-et-Miquelon et son président exercent les attributions dévolues aux conseils
-généraux et régionaux et à leurs présidents respectifs ;
+départementaux et régionaux et à leurs présidents respectifs ;
 
 3° Les références au département ou à la région sont remplacées par des références à la collectivité d'outre-mer de Saint-
 Pierre-et-Miquelon ;
@@ -25,7 +25,7 @@ services des affaires maritimes sont remplacées, selon les modalités d'organis
 des activités maritimes, par des références au directeur de la mer ou à tout autre directeur ou chef de service compétent ;
 
 8° Les références à la chambre de commerce et d'industrie sont remplacées par des références à la chambre d'agriculture, de
-commerce, d'industrie, de métiers et de l'artisanat ;
+commerce, d'industrie, de métiers et de l'artisanat ; 
 
 9° Les références au code général des impôts, au code des douanes et au code de l'urbanisme sont remplacées par des
 références aux textes applicables localement en matière fiscale, douanière et d'urbanisme.
@@ -36,10 +36,6 @@ références aux textes applicables localement en matière fiscale, douanière e
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
+	  - Loi n°2013-403 du 17 mai 2013 - art. 1 (V)
