--- a/02. PARTIE REGLEMENTAIRE/Article R4322-12 - 27233511.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4322-12 - 27233511.md
@@ -1,25 +1,17 @@
 # Article R4322-12
 
 Les membres du conseil d'administration, autres que ceux désignés par le conseil régional, le conseil de Paris et les
-conseils généraux, sont nommés, désignés ou élus pour cinq ans.
+conseils départementaux, sont nommés, désignés ou élus pour cinq ans. 
 
-Les mandats des membres désignés par le conseil régional, le conseil de Paris et les conseils généraux prennent fin lors du
-renouvellement de l'assemblée qui les a désignés.
-
-**Nota:**
-
-
+Les mandats des membres désignés par le conseil régional, le conseil de Paris et les conseils départementaux prennent fin
+lors du renouvellement de l'assemblée qui les a désignés.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°69-535 du 21 mai 1969 - art. 8 alinéas 1 et 2 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2013-938 du 18 octobre 2013 - art. 1 (VD)
