--- a/02. PARTIE REGLEMENTAIRE/Article R5314-16 - 30031058.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5314-16 - 30031058.md
@@ -1,7 +1,7 @@
 # Article R5314-16
 
-Le conseil général peut décider de constituer un seul conseil portuaire pour connaître des affaires de plusieurs ports de peu
-d'importance. 
+Le conseil départemental peut décider de constituer un seul conseil portuaire pour connaître des affaires de plusieurs ports
+de peu d'importance. 
 
 Dans ce cas le conseil est composé dans les mêmes conditions que celles prévues aux articles R. 5314-13 et R. 5314-14, sous
 les réserves suivantes : 
@@ -9,7 +9,7 @@ les réserves suivantes :
 1° Le personnel départemental appartenant au service chargé des ports ou mis par l'Etat à la disposition du département est
 représenté par un seul membre ; 
 
-2° Le président du conseil général peut décider : 
+2° Le président du conseil départemental peut décider : 
 
 a) La constitution d'un seul comité local des usagers permanents des installations portuaires de plaisance pour l'ensemble de
 ces installations ; 
@@ -19,17 +19,9 @@ membres représentant les usagers des ports aux titres respectifs du commerce et
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R*621-4 (Ab)
+	  - Décret n°2013-938 du 18 octobre 2013 - art. 1 (V)
 
 	**Cite**:
 
