--- a/01. PARTIE LEGISLATIVE/Article L1214-15 - 23086104.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-15 - 23086104.md
@@ -2,24 +2,20 @@
 
 Le projet de plan de déplacements urbains est arrêté par l'organe délibérant de l'autorité organisatrice de transport.
 
-Il est soumis, pour avis, aux conseils municipaux, généraux et régionaux ainsi qu'aux autorités administratives compétentes
-de l'Etat concernés dans un délai et des conditions fixés par voie réglementaire.
+Il est soumis, pour avis, aux conseils municipaux, départementaux et régionaux ainsi qu'aux autorités administratives
+compétentes de l'Etat concernés dans un délai et des conditions fixés par voie réglementaire.
 
 Assorti des avis des personnes publiques consultées, il est ensuite soumis par l'autorité organisatrice de transport à une
 enquête publique réalisée conformément au chapitre III du titre II du livre Ier du code de l'environnement.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-2 (M), alinéa 2
+	  - Loi n°2013-403 du 17 mai 2013 - art. 1 (V)
 
 	**Cité par**:
 
 	  - Code des transports - art. L1214-20 (VD)
 	  - Code des transports - art. L1214-23 (VD)
 	  - Code des transports - art. R1214-4 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
