--- a/01. PARTIE LEGISLATIVE/Article L1214-25 - 23086042.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-25 - 23086042.md
@@ -3,7 +3,7 @@
 Le projet de plan de déplacements urbains est arrêté par l'organe délibérant du conseil régional Ile-de-France sur
 proposition du Syndicat des transports d'Ile-de-France.
 
-Le conseil régional soumet le projet, pour avis, aux conseils municipaux et généraux concernés ainsi qu'aux organes
+Le conseil régional soumet le projet, pour avis, aux conseils municipaux et départementaux concernés ainsi qu'aux organes
 délibérants des groupements de collectivités territoriales compétents en matière de déplacements, dans un délai et des
 conditions fixées par voie réglementaire.
 
@@ -12,14 +12,10 @@ réalisée conformément au chapitre III du titre II du livre Ier du code de l'e
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-3 (Ab), alinéa 3
+	  - Loi n°2013-403 du 17 mai 2013 - art. 1 (V)
 
 	**Cité par**:
 
 	  - Code des transports - art. R1214-8 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
