--- a/01. PARTIE LEGISLATIVE/Article L1214-31 - 23085999.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-31 - 23085999.md
@@ -6,8 +6,8 @@ d'un syndicat mixte.
 Le périmètre sur lequel il est établi est arrêté par le représentant de l'Etat dans le ou les départements concernés dans un
 délai fixé par voie réglementaire après transmission de la demande. 
 
-Le conseil régional d'Ile-de-France et les conseils généraux intéressés, les services de l'Etat et le Syndicat des transports
-d'Ile-de-France sont associés à son élaboration. 
+Le conseil régional d'Ile-de-France et les conseils départementaux intéressés, les services de l'Etat et le Syndicat des
+transports d'Ile-de-France sont associés à son élaboration. 
 
 Les représentants des professions et des usagers des transports, les chambres consulaires et les associations agréées de
 protection de l'environnement mentionnées à l'article L. 141-1 du code de l'environnement sont consultés, à leur demande, sur
@@ -19,9 +19,9 @@ le projet.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-4 (VT), alinéas 1, phrases 2 et 3 et 2, phrases 1 et 2
+	  - Loi n°2013-403 du 17 mai 2013 - art. 1 (V)
 
 	**Cité par**:
 
@@ -31,7 +31,7 @@ le projet.
 
 	**Cite**:
 
-	  - Code de l'environnement - art. L141-1 (V)
+	  - Code de l'environnement - art. L141-1
 
 	**Codifié par**:
 
