--- a/01. PARTIE LEGISLATIVE/Article L1214-32 - 23085996.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-32 - 23085996.md
@@ -3,7 +3,7 @@
 Le projet de plan local de déplacements est arrêté par l'organe délibérant de l'établissement public mentionné à l'article L.
 1214-31. 
 
-Le projet est soumis pour avis au conseil régional d'Ile-de-France, aux conseils municipaux et généraux intéressés, aux
+Le projet est soumis pour avis au conseil régional d'Ile-de-France, aux conseils municipaux et départementaux intéressés, aux
 représentants de l'Etat dans les départements concernés ainsi qu'au Syndicat des transports d'Ile-de-France dans un délai et
 des conditions fixés par voie réglementaire. 
 
@@ -13,10 +13,6 @@ code de l'environnement.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-4 (VT), alinéa 2, phrases 3 à 5
-
 	**Cite**:
 
 	  - Code des transports - art. L1214-31 (VD)
@@ -24,7 +20,3 @@ code de l'environnement.
 	**Cité par**:
 
 	  - Code des transports - art. R1214-10 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
