--- a/01. PARTIE LEGISLATIVE/Article L1231-5 - 23085767.md
+++ b/01. PARTIE LEGISLATIVE/Article L1231-5 - 23085767.md
@@ -3,7 +3,7 @@
 Le périmètre de transports urbains peut également comprendre le territoire de plusieurs communes adjacentes ayant décidé
 d'organiser en commun un service de transport public de personnes. Dans ce cas, la création de ce périmètre est décidée et sa
 délimitation fixée par l'autorité administrative compétente de l'Etat sur demande des maires des communes concernées après
-avis du conseil général.
+avis du conseil départemental .
 
 **Nota:**
 
@@ -11,9 +11,13 @@ avis du conseil général.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 27 (VT), alinéa 3
+	  - Loi n°2013-403 du 17 mai 2013 - art. 1 (V)
+
+	**Abrogé par**:
+
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Codifié par**:
 
