--- a/01. PARTIE LEGISLATIVE/Article L1811-4 - 23084907.md
+++ b/01. PARTIE LEGISLATIVE/Article L1811-4 - 23084907.md
@@ -1,14 +1,10 @@
 # Article L1811-4
 
 A La Réunion, l'autorité organisatrice de transports unique est désignée, et le périmètre unique de transports délimité, par
-décret, après avis conforme du conseil général et du conseil régional.
+décret, après avis conforme du conseil départemental et du conseil régional.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 30-3 (VT), alinéa 3
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Loi n°2013-403 du 17 mai 2013 - art. 1 (V)
