--- a/02. PARTIE REGLEMENTAIRE/Article R4322-8 - 27233503.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4322-8 - 27233503.md
@@ -6,8 +6,8 @@ Les seize membres mentionnés au 1° de l'article R. 4322-7 sont :
 
 2° Deux membres désignés par le conseil de Paris, un au titre de la commune et un au titre du département ; 
 
-3° Sept membres désignés respectivement par chacun des conseils généraux des départements de la Seine-Saint-Denis, des Hauts-
-de-Seine, du Val-de-Marne, des Yvelines, de l'Essonne, du Val-d'Oise et de Seine-et-Marne ; 
+3° Sept membres désignés respectivement par chacun des conseils départementaux des départements de la Seine-Saint-Denis, des
+Hauts-de-Seine, du Val-de-Marne, des Yvelines, de l'Essonne, du Val-d'Oise et de Seine-et-Marne ; 
 
 4° Un membre désigné par le conseil municipal de la commune siège de la plus importante zone portuaire de l'établissement ; 
 
@@ -16,25 +16,16 @@ de-Seine, du Val-de-Marne, des Yvelines, de l'Essonne, du Val-d'Oise et de Seine
 6° Quatre représentants des salariés, dont un représentant des cadres, élus conformément aux dispositions du chapitre II du
 titre II de la loi n° 83-675 du 26 juillet 1983 modifiée relative à la démocratisation du secteur public.
 
-**Nota:**
-
-
-
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°69-535 du 21 mai 1969 - art. 6 alinéas 3 à 8 (Ab)
-
-	**Cite**:
-
-	  - Loi n°83-675 du 26 juillet 1983 (V)
-	  - Code des transports - art. R4322-7 (V)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2013-938 du 18 octobre 2013 - art. 1 (VD)
+
+	**Cite**:
+
+	  - Code des transports - art. R4322-7
