--- a/02. PARTIE REGLEMENTAIRE/Article R5314-13 - 30031052.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5314-13 - 30031052.md
@@ -3,7 +3,7 @@
 Dans les ports départementaux où se pratique une seule activité soit de pêche, soit de commerce, il est institué un conseil
 portuaire ainsi composé : 
 
-1° Le président du conseil général ou son représentant qu'il désigne parmi les conseillers généraux, président ; 
+1° Le président du conseil départemental ou son représentant qu'il désigne parmi les conseillers départementaux, président ; 
 
 2° Un représentant du concessionnaire ou de chacun des concessionnaires et dans le cas où elle n'est pas concessionnaire, un
 membre désigné par la chambre de commerce et d'industrie ; 
@@ -20,33 +20,26 @@ b) Un membre du personnel du concessionnaire ou de chacun des concessionnaires ;
 
 c) Dans les ports où il existe un bureau central de la main-d'œuvre, un membre représentant les ouvriers dockers du port. 
 
-Les représentants des personnels et des ouvriers dockers du port sont désignés par le président du conseil général sur
+Les représentants des personnels et des ouvriers dockers du port sont désignés par le président du conseil départemental sur
 proposition des organisations syndicales les plus représentatives des personnels concernés au plan local ; 
 
 5° Des représentants des usagers du port selon les modalités suivantes : 
 
 a) Dans les ports de commerce, six membres choisis parmi les catégories d'usagers mentionnées à l'article R. 5314-25, à
 raison de trois membres désignés par la chambre de commerce et d'industrie et trois membres désignés par le président du
-conseil général ; 
+conseil départemental ; 
 
 b) Dans les ports de pêche, six membres choisis parmi les catégories d'usagers mentionnées à l'article R. 5314-26, à raison
-de quatre membres désignés par le comité local des pêches et deux membres désignés par le président du conseil général. 
+de quatre membres désignés par le comité local des pêches et deux membres désignés par le président du conseil
+départemental. 
 
-Les membres du conseil portuaire sont nommés par arrêté du président du conseil général.
+Les membres du conseil portuaire sont nommés par arrêté du président du conseil départemental.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. R*621-1 (Ab)
-
-	**Codifié par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2013-938 du 18 octobre 2013 - art. 1 (V)
 
 	**Cité par**:
 
