--- a/02. PARTIE REGLEMENTAIRE/Article R5314-14 - 30031054.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5314-14 - 30031054.md
@@ -3,7 +3,8 @@
 Dans les ports où se pratiquent simultanément au moins deux des activités de pêche, de commerce et de plaisance, le conseil
 portuaire est composé de la manière suivante : 
 
-1° Le président du conseil général ou son représentant, qu'il désigne parmi les conseillers généraux, président ; 
+1° Le président du conseil départemental ou son représentant, qu'il désigne parmi les conseillers départementaux,
+président ; 
 
 2° Deux membres désignés par le concessionnaire lorsqu'il existe un seul concessionnaire ou un membre désigné par chaque
 concessionnaire lorsqu'il y a au moins deux concessionnaires ; 
@@ -20,32 +21,24 @@ b) Un membre du personnel de chacun des concessionnaires ;
 
 c) Dans les ports où il existe un bureau central de la main-d'œuvre, un membre représentant les ouvriers dockers du port. 
 
-Les représentants des personnels et des ouvriers dockers du port sont désignés par le président du conseil général sur
+Les représentants des personnels et des ouvriers dockers du port sont désignés par le président du conseil départemental sur
 proposition des organisations syndicales représentatives des personnels concernés ; 
 
 5° Neuf membres représentant les usagers du port choisis parmi les catégories d'usagers mentionnées aux articles R. 5314-25 à
-R. 5314-27, à raison de trois membres désignés par le président du conseil général et six membres désignés respectivement par
-la chambre de commerce et d'industrie, le comité local des pêches et le comité local des usagers permanents des installations
-portuaires de plaisance, constitué dans les mêmes conditions que celles prévues à l'article R. 5314-19 et réuni au moins une
-fois par an par le président du conseil ou son représentant. Le président du conseil général détermine le nombre de sièges
-revenant à chaque catégorie d'usagers au titre du commerce, de la pêche et de la plaisance, compte tenu de l'importance
-respective de chacune de ces activités. 
+R. 5314-27, à raison de trois membres désignés par le président du conseil départemental et six membres désignés
+respectivement par la chambre de commerce et d'industrie, le comité local des pêches et le comité local des usagers
+permanents des installations portuaires de plaisance, constitué dans les mêmes conditions que celles prévues à l'article R.
+5314-19 et réuni au moins une fois par an par le président du conseil ou son représentant. Le président du conseil
+départemental détermine le nombre de sièges revenant à chaque catégorie d'usagers au titre du commerce, de la pêche et de la
+plaisance, compte tenu de l'importance respective de chacune de ces activités. 
 
-Les membres du conseil portuaire sont nommés par arrêté du président du conseil général.
+Les membres du conseil portuaire sont nommés par arrêté du président du conseil départemental.
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R*621-2 (Ab)
+	  - Décret n°2013-938 du 18 octobre 2013 - art. 1 (V)
 
 	**Cité par**:
 
