--- a/02. PARTIE REGLEMENTAIRE/Article R5314-15 - 30031056.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5314-15 - 30031056.md
@@ -9,25 +9,17 @@ les affaires qui leur sont confiées par le conseil ou par le président.
 Les sections permanentes comportent tous les usagers désignés au titre d'une même activité, et en nombre au plus égal, des
 membres choisis parmi les catégories mentionnées aux 2°, 3° et 4° de l'article R. 5314-14. 
 
-Les membres des sections autres que les usagers sont désignés par le président du conseil général parmi les membres du
+Les membres des sections autres que les usagers sont désignés par le président du conseil départemental parmi les membres du
 conseil portuaire. 
 
 Les sections sont convoquées par le président du conseil portuaire dans les mêmes conditions que le conseil. Elles sont
-présidées par le président du conseil général ou son représentant.
+présidées par le président du conseil départemental ou son représentant.
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R*621-3 (Ab)
+	  - Décret n°2013-938 du 18 octobre 2013 - art. 1 (V)
 
 	**Cite**:
 
