--- a/02. PARTIE REGLEMENTAIRE/Article R1241-9 - 28996473.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-9 - 28996473.md
@@ -40,8 +40,9 @@ la Commission nationale du débat public et à l'enquête publique des aménagem
 14° L'approbation des décisions de classement ou de déclassement des biens de son domaine public au-dessus d'un seuil qu'il
 fixe ; 
 
-15° L'approbation des décisions de transfert de gestion, d'acquisition et d'aliénation de tous biens immobiliers ou de prise
-ou de cession de bail au-dessus d'un seuil qu'il fixe ; 
+15° L'approbation des décisions de prise à bail, de cession de bail, de transfert de gestion, d'acquisition et d'aliénation
+de tous biens immobiliers ou mobiliers, ainsi que d'occupation ou de sous-occupation domaniale, lorsque le montant de
+l'opération sur laquelle porte la décision, le cas échéant annualisé, est supérieur à un seuil qu'il fixe ; 
 
 16° L'approbation des transactions d'un montant supérieur à un seuil qu'il fixe ; 
 
@@ -59,25 +60,21 @@ prendre de décisions qu'à l'unanimité de leurs membres présents.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2005-664 du 10 juin 2005 - art. 6 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-748 du 27 juin 2015 - art. 2
 
 	**Cite**:
 
-	  - Code général des collectivités territoriales - art. L2531-2 (V)
-	  - Code de l'urbanisme - art. L300-2 (V)
-	  - Code des transports - art. L1241-3 (V)
-	  - Code des transports - art. R1241-22 (V)
-	  - Code des transports - art. R1241-8 (V)
+	  - Code général des collectivités territoriales - art. L2531-2
+	  - Code de l'urbanisme - art. L300-2
+	  - Code des transports - art. L1241-3
+	  - Code des transports - art. R1241-22
+	  - Code des transports - art. R1241-8
 
 	**Cité par**:
 
