--- a/02. PARTIE REGLEMENTAIRE/Article R1241-11 - 28996477.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-11 - 28996477.md
@@ -1,16 +1,17 @@
 # Article R1241-11
 
-Sous réserve des dispositions de l'article L. 1241-10, les décisions du conseil sont prises à la majorité absolue des membres
-présents ou représentés. 
+Sous réserve des dispositions de l'article L. 1241-10, les décisions du conseil sont prises à la majorité absolue des
+suffrages exprimés par les  membres présents ou représentés. 
 
 En cas de partage égal des voix, la voix du président de séance est prépondérante. 
 
 Le conseil ne peut délibérer valablement que si la moitié au moins de ses membres participent à la séance ou y sont
 représentés. 
 
-Si le quorum n'est pas atteint, les décisions sur les questions portées à l'ordre du jour de la séance peuvent être prises,
-après convocation régulière, sans condition de quorum, à la séance suivante, à la majorité absolue, ou à la majorité
-qualifiée lorsqu'elle est requise, des membres présents ou représentés. 
+Si le quorum n'est pas atteint, le conseil se réunit de plein droit trois jours plus tard sur le même ordre du jour. Les
+décisions sont alors valables quel que soit le nombre des membres présents ou représentés, dès lors qu'elles sont prises à la
+majorité absolue, ou à la majorité qualifiée lorsqu'elle est requise, des suffrages exprimés par les membres présents ou
+représentés.
 
 Les délibérations font l'objet de procès-verbaux dont le texte est arrêté par le président de séance et soumis à
 l'approbation du conseil. 
@@ -21,18 +22,14 @@ Les séances du conseil ne sont pas publiques, sauf décision contraire du prés
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2005-664 du 10 juin 2005 - art. 8, alinéa 1er, 1re phrase, alinéas 2 à 7 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-748 du 27 juin 2015 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L1241-10 (V)
+	  - Code des transports - art. L1241-10
