--- a/02. PARTIE REGLEMENTAIRE/Article R1241-50 - 28996559.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-50 - 28996559.md
@@ -1,7 +1,8 @@
 # Article R1241-50
 
-Un débat a lieu au conseil du Syndicat des transports d'Ile-de-France sur les orientations générales du budget, deux mois au
-moins avant l'examen de celui-ci et dans les conditions fixées par le règlement intérieur prévu par l'article R. 1241-9.
+Un débat a lieu au conseil du Syndicat des transports d'Ile-de-France sur les orientations générales du budget,    dans un
+délai de dix semaines précédant l'examen de celui-ci et dans les conditions fixées par le règlement intérieur prévu par
+l'article R. 1241-9. 
 
 Le budget du syndicat et le tableau des effectifs annexé sont présentés par le directeur général au conseil qui en délibère
 au plus tard le 31 décembre de l'année précédant celle pour laquelle ils sont établis. 
@@ -13,18 +14,14 @@ jours qui suivent son adoption ou éventuellement sa notification après règlem
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2005-664 du 10 juin 2005 - art. 18, alinéas 14 à 17, paragraphe III (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-748 du 27 juin 2015 - art. 5
 
 	**Cite**:
 
-	  - Code des transports - art. R1241-9 (V)
+	  - Code des transports - art. R1241-9
