--- a/02. PARTIE REGLEMENTAIRE/Article R1241-6 - 28996467.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-6 - 28996467.md
@@ -1,24 +1,21 @@
 # Article R1241-6
 
-Les membres du conseil du Syndicat des transports d'Ile-de-France ne peuvent prendre ou conserver aucun intérêt, occuper
-aucune fonction dans les entreprises exploitant des réseaux de transport de personnes en Ile-de-France ou dans les
+A l'exception de la représentation du syndicat au conseil de surveillance de la SNCF ainsi qu'au conseil d'administration de
+SNCF Réseau, les membres du conseil du Syndicat des transports d'Ile-de-France ne peuvent prendre ou conserver aucun intérêt,
+occuper aucune fonction dans les entreprises exploitant des réseaux de transport de personnes en Ile-de-France ou dans les
 entreprises traitant avec lesdites entreprises pour des marchés de travaux, de fournitures ou de services ainsi que dans les
 établissements publics gestionnaires d'infrastructures de transport. Ils ne peuvent prêter leur concours à titre onéreux à
 ces entreprises ou établissements.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2005-664 du 10 juin 2005 - art. 3, alinéa 6, paragraphe II (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-748 du 27 juin 2015 - art. 1
 
 	**Cité par**:
 
